--- a/css/main.css
+++ b/css/main.css
@@ -102,8 +102,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-
+@font-face {
+  font-family: Arkhip;
+  src: url(fonts/Arkhip_font.ttf);
+}
 ul li {
   list-style: none;
 }
@@ -112,6 +114,7 @@ body {
   background-color: rgb(78, 75, 75);
   color: #fff;
   font-size: 16px;
+  font-family: "Raleway", sans-serif;
 }
 a, a:hover {
   text-decoration: none;
@@ -125,7 +128,8 @@ header address a {
   display: block;
   padding: 15px 20px;
   position: relative;
-  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+  text-align: center;
 }
 header address a > i {
   margin-right: 8px;
@@ -136,12 +140,14 @@ header > .top-menu {
   padding: 10px 0;
 }
 .top-menu a.logo {
-  display: block;
+  display: inline-block;
   margin: auto;
+}
+.top-menu a.logo img {
+  max-height: 50px;
 }
 .top-menu  nav {
   display: flex;
-  font-family: "Raleway", sans-serif;
 }
 .top-menu ul {
   margin: 0;
@@ -161,10 +167,46 @@ header > .top-menu {
 .top-menu ul li a:hover {
   background-color: rgb(78, 75, 75);
 }
-
-
-
-
+header > .banner {
+  position: relative;
+  background-color: #312f2f;
+  min-height: 250px;
+  padding: 30px 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('../img/laptop-photo-dark.jpg');
+}
+header > .banner:before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #000;
+  opacity: 0.5;
+  content: "";
+}
+header h1 strong {
+  font-family: "Arkhip", sans-serif;
+}
+.banner-content p {
+  text-align: justify;
+}
+.banner-content a {
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 5px 10px;
+  border: 2px solid #fff;
+  font-weight: 700;
+  font-size: 18px;
+  transition: all 0.3s linear;
+}
+.banner-content a:hover, .banner-content a:focus {
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+}
 
 
 
