--- a/css/main.css
+++ b/css/main.css
@@ -554,8 +554,56 @@ END OF BLOCK OF ADVANTAGES STYLES
   background-color: #fff;
   color: #000;
 }
+.service-item {
+  /*box-shadow: 0 0 10px 0;*/
+}
+.service-item .item-text {
+  /*padding-top: 20px;
+  padding-bottom: 20px;*/
+}
+.service-item h4 {
+  text-align: center;
+  font-family: "Arkhip", sans-serif;
+}
+.service-item p {
+  text-align: justify;
 
-
+}
+.service-item a.item-order {
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 5px 10px;
+  border: 2px solid #000;
+  font-weight: 700;
+  font-size: 18px;
+  transition: all 0.1s linear;
+}
+.service-item a.item-order:hover {
+  background-color: #000;
+  color: #fff;
+}
+.service-item .item-portfolio {
+  position: relative;
+  background-image: url("../img/exmpls/portfolio_bg.jpg");
+  background-position: top left;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.service-item .item-portfolio img { 
+  position: absolute;
+  display: block;
+  max-height: 80%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px;
+}
+.service-item .item-portfolio img.img-1 {
+  top: 10%;
+  left: 10%;
+}
+.service-item .item-portfolio img.img-2 {
+  top: 10%;
+  right: 10%;
+}
 /*===============================================
 MEDIA STYLES BLOCK
 ===============================================*/
