--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ header h1 strong {
 .banner-content p {
   text-align: justify;
 }
-.banner-content a {
+.banner-content a, .portfolio-item > .example-details > a {
   text-transform: uppercase;
   display: inline-block;
   padding: 5px 10px;
@@ -288,7 +288,9 @@ header h1 strong {
   font-size: 18px;
   transition: all 0.1s linear;
 }
-.banner-content a:hover, .banner-content a:focus {
+.banner-content a:hover, .banner-content a:focus,
+.portfolio-item > .example-details > a:hover,
+.portfolio-item > .example-details > a:focus {
   background-color: #fff;
   color: #000;
   cursor: pointer;
@@ -693,24 +695,42 @@ ABOUT COMPANY SECTION STYLES
 /*=================================================
 EXAMPLES SECTION STYLES
 =================================================*/
+.portfolio-sect {
+  background-color: #ececec;
+}
 .portfolio-page > div:first-child {
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+  margin-bottom: 40px;
 }
 .portfolio-item {
   max-height: 400px;
   overflow: hidden;
-}
-.portfolio-item:first-child {
-  padding-right: 20px;
-}
-.portfolio-item:last-child {
-  padding-left: 20px;
+  position: relative;
 }
 .portfolio-item > img {
   display: block;
   width: 100%;
   height: auto;
+}
+.portfolio-item > .example-details {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 15px;
+  right: 15px;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+}
+.portfolio-item > .example-details > img,
+.portfolio-item > .example-details > a {
+  display: block;
+  margin: 10px auto;
+  max-width: 85%;
+  max-height: 50%;
+}
+.portfolio-item:hover > .example-details {
+  display: flex;
+  cursor: pointer;
 }
 
 /*===============================================
